style(welcome): refine welcome component styles
- Adjusted background opacity
- Modified font weight
- Adjusted text shadow
- Reduced button size

--- a/src/pages/welcome2.astro
+++ b/src/pages/welcome2.astro
@@ -17,7 +17,7 @@ import WelcomeWithUpload from '../components/welcome/WelcomeWithUpload';
         />
     </head>
     <body>
-        <WelcomeWithUpload client:load />
+        <WelcomeWithUpload client:only="react" />
 
         <style is:global>
             * {
