--- a/src/pages/welcome.astro
+++ b/src/pages/welcome.astro
@@ -36,7 +36,7 @@ import '../styles/welcome.css'
         <div class="absolute inset-0 flex h-screen w-full items-center justify-center">
             <div class="mx-auto max-w-5xl rounded-lg bg-black bg-opacity-50 p-8 text-center shadow-lg">
                 <h1 class="church-title mb-4">คริสตจักรเมล็ดพันธุ์กรุงเทพ</h1>
-                <h1 class="subtitle mb-4">The Seed Of Bangkok City Church</h1>
+                <h1 class="subtitle mb-4">Seed Church Bangkok</h1>
             </div>
         </div>
 
