--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -63,4 +63,8 @@ import '@fontsource/sarabun' // 'DM Sans'
             color: snow;
         }
     }
+
+    .custom-cursor {
+        cursor: url('/cursor/sheep.png'), auto;
+    }
 </style>
