--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -129,7 +129,7 @@ const metadata = {
         </Fragment>
 
         <Fragment slot="subtitle">
-            <br class="hidden md:inline" /> สิบปากว่าไม่เท่าตาเห็น สิบหูได้ยินไม่เท่าได้ยินเอง
+            <br class="hidden md:inline" /> สิบปากว่าไม่เท่าตาเห็น สิบหูได้ยิน ไม่เท่าลงมาสัมผัสด้วยตัวเอง
         </Fragment>
     </CallToAction>
 
