--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { language, textDirection } = I18N
 ---
 
 <!doctype html>
-<html lang={language} dir={textDirection} class="2xl:text-[20px]">
+<html lang={language} dir={textDirection} class="custom-cursor 2xl:text-[20px]">
     <head>
         <CommonMeta />
         <Favicons />
