--- a/src/pages/welcome2.astro
+++ b/src/pages/welcome2.astro
@@ -1,13 +1,13 @@
 ---
-import WelcomeWithUpload from '../components/welcome/WelcomeWithUpload';
+import WelcomeWithUpload from '../components/welcome/WelcomeWithUpload'
 ---
 
 <html lang="th">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Welcome - The Seed Of Bangkok City Church</title>
-        
+        <title>Welcome - Seed Church Bangkok</title>
+
         <!-- Pridi Font from Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
