feat: Update welcome page video to test22.mp4

--- a/src/pages/welcome.astro
+++ b/src/pages/welcome.astro
@@ -26,7 +26,7 @@ import '../styles/welcome.css'
                     playsinline
                     id="background-video"
                 >
-                    <source src="/videos/warm.mp4" type="video/mp4" />
+                    <source src="/videos/test22.mp4" type="video/mp4" />
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -92,8 +92,8 @@ import '../styles/welcome.css'
                 bottom: 0;
                 min-width: 100%;
                 min-height: 100%;
-                width: auto;
-                height: auto;
+                /* width: auto;
+                height: auto; */
                 z-index: -1;
             }
         </style>
